# maindeck

./: .clinerules  .gitignore  .windsurfrules  OTIMIZACAO-EXTREMA-GUIA.md  OTIMIZACOES-APLICADAS.md  README.md  STATUS.md  TASKBAR-ACTIVATION-FIX.md  anim-test-max.sh  anim-test-swap.sh  anim-test.sh  bar-config.c  bar-config.h  bar-game-mode.c  bar-game-mode.h  bar-icons.c  bar-icons.h  bar-input.c  bar-input.h  bar-log.h  bar-main.c  bar-quicklaunch.c  bar-quicklaunch.h  bar-render.c  bar-render.h  bar-state.h  bar-status.c  bar-status.h  bar-surface.c  bar-surface.h  bar-taskbar.c  bar-taskbar.h  bar-tray.c  bar-tray.h  close-deck-test.sh  close-pixel-test.sh  cursor-disappear-plan.md  grow-test.sh  maindeck-menu.c  maindeck-proxy.c  (+36 more)
.cascade/consolidar_e_ajustar_prototipos/: brief.md  plan.md  state.json
.cascade/deck-switch-fix/: crash-analysis-input.md  ghost-analysis-input.md  ghost-analysis-review.md  state.json
.cascade/evitar_duplicacao_barra/: brief.md  plan.md  review-input.md  review.md  state.json
.cascade/foco_janela_swap/: brief.md  plan-claude.md  plan.md  review-input.md  review.md  state.json
.cascade/main-maximize-animation/: brief.md  review-input.md  state.json
.cascade/otimizacoes_graficas/: brief.md  plan.md  state.json
.cascade/pronounce-deck-switch-animation/: brief.md  review-input.md  review.md  state.json
config-backups/: fuzzel-toggle.sh.bak  fuzzel.ini.bak  river-init.bak
ctxmenu-ipc-test/: ipc_probe.py  run.sh
docs/: _kbtest.html  anim-deck-switch-e-close.md  auditoria-animacoes.md  future-matching-plan.md  local-session-config.md  otimizacoes.md  parity-prototype-plan.md  planilha-consideracoes.csv  planilha-consideracoes.xlsx  plano-maindeck-windows.md  plano-maindeck-x11.md  proposta-p0.md  prototype-anim-p1.html  prototype-anim-p10.html  prototype-anim-p11.html  prototype-anim-p11a.html  prototype-anim-p11b.html  prototype-anim-p11c.html  prototype-anim-p11e.html  prototype-anim-p11g.html  prototype-anim-p11h.html  prototype-anim-p12a.html  prototype-anim-p12c.html  prototype-anim-p13.html  prototype-anim-p14.html  prototype-anim-p14a.html  prototype-anim-p14a1.html  prototype-anim-p15.html  prototype-anim-p15a.html  prototype-anim-p15a1.html  prototype-anim-p15a2.html  prototype-anim-p15a3.html  prototype-anim-p15a4.html  prototype-anim-p15a5.html  prototype-anim-p15a6.html  prototype-anim-p15b.html  prototype-anim-p16.html  prototype-anim-p2.3.html  prototype-anim-p2.html  prototype-anim-p3.1.html  (+13 more)
docs/archive/: prototype-anim-p1.1.html  prototype-anim-p11d.html  prototype-anim-p11f.html  prototype-anim-p11i.html  prototype-anim-p12.html  prototype-anim-p12b.html  prototype-anim-p14b.html  prototype-anim-p14b1.html  prototype-anim-p16.html  prototype-anim-p2.2.html  prototype-anim-p3.2.html  prototype-anim-p3.html  prototype-anim-p4.1.html  prototype-anim-p5.2.html  prototype-anim-p7.html  prototype.html
janelas-filhas-task/: DIAGNOSTICO-foco-filhas.md  PLANO-correcao-foco-filhas.md
janelas-filhas-task/autofloat-test/: probe.c  run-tests.sh
otimizacao-jogos-task/: brief.md  counter.md  diff.patch  plan.md  review.md
patches/: river-anim-p17-align.patch
patches/compositor-animations/: 0001-maindeck-anim-Step-1-position-tween-open-fade.patch  0002-maindeck-anim-fix-open-fade-frozen-when-interrupted-.patch  0003-maindeck-anim-Step-1-close-fade-via-compositor-owned.patch  0004-maindeck-anim-Step-2b-scale-pop-on-open-close-around.patch  0005-maindeck-anim-Step-2c-spring-easing-size-tween-swap-.patch  0006-maindeck-anim-fix-in-flight-animation-cleared-every-.patch  0007-maindeck-anim-remove-temporary-runtime-test-instrume.patch  p17-directional-slides-river.patch  p17-directional-slides-wm.patch
protocol/: river-window-management-v1.xml
tools/: benchmark-wm.py  build-deploy.sh  install-maindeck.sh  measure-all.py  measure-consumption.py  perf-wm.py  renderer-bench.sh  test-cursor-fallback.sh  test-dialog.py  test-transient-behavior.sh  toplevel-smoke.c
